# pydash

./: .gitignore  CMakeLists.txt  GlobPtr_py.h  GlobPtrmodule.c  README.md  build.dev.sh  build.sh
CMakeExt/pybind11/: pybind11Config.cmake  pybind11Targets.cmake
_deprecated/_experiments/value_categories_experiments/: Makefile  array_wrapper_2stage.h  macro.h  main.cc
_deprecated/pycxx/include/cxxdash/: Defines.hxx  GlobPtr.hxx
_experiments/: example.cpp
_source/: measurements.cc
bindings/: CMakeLists.txt  GlobPtr_h_binding.cpp  Init_h_binding.cpp  Init_h_binding_c.cpp  build.sh  setup.py
bindings/src/: Custom_Value_Type.h  Init.cc  logged_val.cc  logged_val.h  macro.h
cdash/: CMakeLists.txt
cdash/include/cdash/: Array.h  CArray.h  GlobPtr.h  Team.h
cdash/src/: Array.cc  Array.h  GlobPtr.cc  Team.cc
cxxdash/src/: GlobPtr.cxx  Init.cxx
deprecated/boost.python/: CMakeLists.txt
deprecated/boost.python/src/: xxmodule.c
deprecated/pycxx/: CMakeLists.txt
deprecated/pycxx/include/cxxdash/: Init.hxx
deprecated/pycxx/src/: GlobPtr.cxx
experiments/value_categories_experiments/: CMakeLists.txt  FindPybind11.cmake  Readme.md  array_maker.cc  array_maker.h  array_maker_binding.cc  array_wrapper.h  array_wrapper_binding.cpp  data_container.cpp  it_example.h  main.cc
experiments/value_categories_experiments/ArrayWrapper.so.dSYM/Contents/: Info.plist
experiments/value_categories_experiments/example.so.dSYM/Contents/: Info.plist
pydash/: CMakeLists.txt
test/: .errorclass.cpp.cppimporthash  .rendered.errorclass.cpp  ArrayTest.cc  ArrayTest.h  array_test.py  error_case.py  errorclass.cpp  hello.py  initialize_test.py  logval_array_test.py  test_array_local.py  test_conditioned_exectuion.py  test_crash.py  test_create_garbage.py  test_cross_access.py  test_gc.py  test_init.py  test_initialize.py  test_invalid_pointer.py  test_iterator_compl.py  test_logval.py  test_logval_array.py  test_min_element.py  test_provocate.py  test_provoke.py  test_shared_ptr.py  test_suspend.py  test_value_categories.py  test_value_categories_result.txt
test/test_value_categories/: test_value_categories.py
